<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    tools:context=".Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/icon_imv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="171dp"
            android:src="@drawable/baseline_account_circle_24" />

        <TextView
            android:id="@+id/connection_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_imv"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="20dp"
            android:text="@string/connection"
            android:textColor="@color/bleu"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/reg_nom_prenoms_edt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/nom_prenoms"
            android:inputType="text"
            android:layout_below="@id/connection_txt"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:id="@+id/reg_email_edt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/reg_nom_prenoms_edt"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/reg_valider_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_email_edt"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="101dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="110dp"
            android:text="@string/valider"
            android:textSize="20sp" />
    </RelativeLayout>

</ScrollView>